add endpoint /test api gateway
